tests/ui/traits/const-traits/non-const-op-in-closure-in-const.stderr
error: `[const]` can only be applied to `#[const_trait]` traits
  --> $DIR/non-const-op-in-closure-in-const.rs:10:44
   |
LL | impl<A, B> const Convert<B> for A where B: [const] From<A> {
   |                                            ^^^^^^^ can't be applied to `From`
   |
note: `From` can't be used with `[const]` because it isn't annotated with `#[const_trait]`
  --> $SRC_DIR/core/src/convert/mod.rs:LL:COL

error: `[const]` can only be applied to `#[const_trait]` traits
  --> $DIR/non-const-op-in-closure-in-const.rs:10:44
   |
LL | impl<A, B> const Convert<B> for A where B: [const] From<A> {
   |                                            ^^^^^^^ can't be applied to `From`
   |
note: `From` can't be used with `[const]` because it isn't annotated with `#[const_trait]`
  --> $SRC_DIR/core/src/convert/mod.rs:LL:COL
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0015]: cannot call non-const associated function `<B as From<A>>::from` in constant functions
  --> $DIR/non-const-op-in-closure-in-const.rs:12:9
   |
LL |         B::from(self)
   |         ^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0015`.
